Fix product page visibility issues

--- a/web/html/src/branding/css/susemanager/components/buttons.less
+++ b/web/html/src/branding/css/susemanager/components/buttons.less
@@ -34,7 +34,7 @@
   }
 
   // Branding hover effect
-  &:not(:disabled):not(.disabled):hover::after {
+  &:not(:disabled):not(.disabled):not(.text-muted):hover::after {
     // background: #686565;
     border: 2px solid transparent;
     bottom: -2px;
@@ -57,7 +57,7 @@
   }
 
   &.text-muted {
-    color: inherit;
+    color: inherit !important;
   }
 }
 
@@ -79,7 +79,7 @@
       border-color: @eos-bc-pine-500;
       color: @eos-bc-pine-500;
 
-      &:not(:disabled):not(.disabled):hover::after {
+      &:not(:disabled):not(.disabled):not(.text-muted):hover::after {
         background: @eos-bc-pine-500;
       }
     }
@@ -93,7 +93,7 @@
       border-color: @eos-bc-persimmon-500;
       color: @eos-bc-gray-1000;
 
-      &:not(:disabled):not(.disabled):hover::after {
+      &:not(:disabled):not(.disabled):not(.text-muted):hover::after {
         background: @eos-bc-gray-900;
       }
     }
@@ -107,7 +107,7 @@
       border-color: @eos-bc-persimmon-500;
       color: @eos-bc-gray-1000;
 
-      &:not(:disabled):not(.disabled):hover::after {
+      &:not(:disabled):not(.disabled):not(.text-muted):hover::after {
         background: @eos-bc-persimmon-500;
       }
     }
@@ -128,7 +128,7 @@
         border-color: @eos-bc-red-900;
       }
 
-      &:not(:disabled):not(.disabled):hover::after {
+      &:not(:disabled):not(.disabled):not(.text-muted):hover::after {
         background: @eos-bc-gray-900;
       }
     }
@@ -140,7 +140,7 @@
   padding: 6px 12px;
   z-index: 100;
 
-  &:not(:disabled):not(.disabled):hover::after {
+  &:not(:disabled):not(.disabled):not(.text-muted):hover::after {
     border-width: 1px;
     bottom: -1px;
     left: -1px;
